--- a/fedex.css
+++ b/fedex.css
@@ -1,3 +1,4 @@
+@-moz-document	url-prefix(https://pilot.fedex.com/) {
 form[name=main] td:not(.fixedfont td) {
  font-family: Menlo-Regular !important; 
  letter-spacing: -0.5pt !important;
@@ -14,3 +15,4 @@ form[name=main] td:not(.fixedfont td) {
 div, p, h1, h2, h3, h4, .top-bar, .content, .smallpurpleheader, .smallgreenheader, .pagesubheader, .pagesubheader2, .subheader, .warning, .alert, .chan, .top-bar-section {
 	font-family: -apple-system !important;
 	}
+}
